--- a/leds.html
+++ b/leds.html
@@ -74,7 +74,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4 mx-2">
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (1).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (1).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -85,7 +85,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (2).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (2).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">KN - 130</h5>
                     <p class="card-text">Rs. 850.00</p>
@@ -94,7 +94,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (3).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (3).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -105,7 +105,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (4).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (4).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -116,7 +116,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (5).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (5).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -127,7 +127,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (6).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (6).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -138,7 +138,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (7).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (7).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -149,7 +149,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (8).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (8).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -160,7 +160,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (9).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (9).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -171,7 +171,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (10).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (10).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -182,7 +182,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (11).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (11).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -193,7 +193,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (12).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (12).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -204,7 +204,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (13).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (13).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -215,7 +215,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (14).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (14).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -226,7 +226,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (15).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (15).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -237,7 +237,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (16).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (16).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -248,7 +248,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (17).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (17).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -259,7 +259,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (18).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (18).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -270,7 +270,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (19).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (19).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -281,7 +281,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (21).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (21).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -292,7 +292,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (22).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (22).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -303,7 +303,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="./LEDs/led (23).jpeg" class="card-img-top cardImage mx-auto" alt="...">
+                <img src="./led (23).jpeg" class="card-img-top cardImage mx-auto" alt="...">
                 <div class="card-body">
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
