--- a/mdfs.html
+++ b/mdfs.html
@@ -54,7 +54,7 @@
     </nav>
 
     <footer class="blog-footer footer rounded text-center">
-        <p>&copy; All rights reserved @giftswalla.com</p>
+        <p>&copy; All rights reserved @thegiftwalla.com</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
