--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                         <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./features.html">Features</a>
+                        <a class="nav-link text-muted" href="./features.html">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./contactUs.html">Contact Us</a>
+                        <a class="nav-link text-muted" href="./contactUs.html">Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
