--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@
 
     <br>
 
+    <div class="alert alert-success alert-dismissible fade show text-center mx-2" role="alert">
+        <strong>Hey!</strong> This website is under development, you can suggest edits to
+        <strong>@thepentesterguy_</strong> or
+        <strong>@__its_danish007</strong>, Thanks!
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+
     <div class="carousel">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
