--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                             Explore
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Home Decor</a>
+                            <li><a class="dropdown-item" href="./index.html">Home Decor</a>
                             <li><a class="dropdown-item" href="./leds.html">LEDs</a></li>
                             <li><a class="dropdown-item" href="./mdfs.html">MDF Cut Out Frames</a></li>
-                            <li><a class="dropdown-item" href="#">Illusion lamps</a>
-                            <li><a class="dropdown-item" href="#">Lamps & Decor</a>
-                            <li><a class="dropdown-item" href="#">Drinkware & Printable T-shirts</a>
-                            <li><a class="dropdown-item" href="#">Keychains</a>
+                            <li><a class="dropdown-item text-muted" href="#">Illusion lamps</a>
+                            <li><a class="dropdown-item text-muted" href="#">Lamps & Decor</a>
+                            <li><a class="dropdown-item text-muted" href="#">Drinkware & Printable T-shirts</a>
+                            <li><a class="dropdown-item text-muted" href="#">Keychains</a>
                             </li>
                         </ul>
                     </li>
