--- a/mdfs.html
+++ b/mdfs.html
@@ -27,10 +27,10 @@
                         <a class="nav-link" aria-current="page" href="./index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
+                        <a class="nav-link text-muted" href="#">Features</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contact Us</a>
+                        <a class="nav-link text-muted" href="#">Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -40,11 +40,11 @@
                         <ul class="dropdown-menu">
                             <li><a class="dropdown-item" href="./leds.html">LEDs</a></li>
                             <li><a class="dropdown-item" href="./mdfs.html">MDF Cut Out Frames</a></li>
-                            <li><a class="dropdown-item" href="#">Illusion lamps</a>
-                            <li><a class="dropdown-item" href="#">Lamps & Decor</a>
-                            <li><a class="dropdown-item" href="#">Drinkware & Printable T-shirts</a>
-                            <li><a class="dropdown-item" href="#">Keychains</a>
-                            <li><a class="dropdown-item" href="#">Home Decor</a>
+                            <li><a class="dropdown-item text-muted" href="#">Illusion lamps</a>
+                            <li><a class="dropdown-item text-muted" href="#">Lamps & Decor</a>
+                            <li><a class="dropdown-item text-muted" href="#">Drinkware & Printable T-shirts</a>
+                            <li><a class="dropdown-item text-muted" href="#">Keychains</a>
+                            <li><a class="dropdown-item text-muted" href="#">Home Decor</a>
                             </li>
                         </ul>
                     </li>
