--- a/mdfs.html
+++ b/mdfs.html
@@ -53,6 +53,12 @@
         </div>
     </nav>
 
+    &nbsp;
+
+   <div class="mx-2">
+        <h2>Nothing here yet.</h2>
+   </div>
+
     <footer class="blog-footer footer rounded text-center">
         <p>&copy; All rights reserved @thegiftwalla.com</p>
     </footer>
